<?xml version="1.0" encoding="utf-8"?>
<!--主页-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.applicationcombine.MainActivity">

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:id="@+id/button3"
        android:background="@android:drawable/presence_online" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/two"
        android:id="@+id/imageView"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <Button
        android:text="@string/shujia"
        android:layout_width="50dp"
        android:id="@+id/button"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/shucheng"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button2"
        android:background="@android:color/background_light"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3" />

    <Button
        android:text="@string/个人"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button5"
        android:background="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/播放"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button4"
        android:background="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

</RelativeLayout>
