<?xml version="1.0" encoding="utf-8"?>
<!--童话书城-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.applicationcombine.Main2Activity">

    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/button6"
        android:background="@android:drawable/presence_online"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button7"
        android:background="@android:color/background_light"
        android:text="@string/shujia"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <Button
        android:text="@string/shucheng"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="45dp"
        android:layout_marginEnd="45dp"
        android:id="@+id/button9"
        android:textSize="14sp"
        android:background="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button6"
        android:layout_toStartOf="@+id/button6"
        tools:ignore="SmallSp" />

    <Button
        android:text="@string/播放"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="49dp"
        android:layout_marginEnd="49dp"
        android:id="@+id/button10"
        android:background="@android:color/background_light"
        android:textSize="10sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        tools:ignore="SmallSp,UnknownId" />

    <Button
        android:text="@string/个人"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button11"
        android:background="@android:color/background_light"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <Button
        android:text="@string/播放"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/button12"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button6"
        android:layout_toEndOf="@+id/button6"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:background="@android:color/background_light"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <ImageView
        android:layout_width="wrap_content"
        app:srcCompat="@drawable/eight"
        android:id="@+id/imageView22"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        android:layout_above="@+id/button9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="195dp"
        android:id="@+id/button8"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button12"
        android:layout_alignStart="@+id/button12"
        android:background="@android:color/transparent" />

    <Button
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:id="@+id/button14"
        android:layout_width="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText"
        android:background="@android:color/transparent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button16"
        android:layout_below="@+id/button8"
        android:layout_toLeftOf="@+id/button11"
        android:layout_toStartOf="@+id/button11"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent" />

</RelativeLayout>
