<?xml version="1.0" encoding="utf-8"?>
<!--某本童话书章节列表-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="〈" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:text="《JianJiaoMao》"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/b3"
                    app:srcCompat="@drawable/b5"
                    android:layout_width="157.5dp"
                    android:layout_height="245.17dp"
                    android:layout_marginLeft="30dp"
                    android:background="#002C3F2E"
                    android:scaleType="fitXY"
                    android:src="@drawable/b1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/textView2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/b4"
                    app:srcCompat="@drawable/b4"
                    android:layout_width="157.5dp"
                    android:layout_height="245.17dp"
                    android:layout_marginLeft="30dp"
                    android:background="#002C3F2E"
                    android:scaleType="fitXY"
                    android:src="@drawable/b3" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/textView9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/b5"
                    app:srcCompat="@drawable/b1"
                    android:layout_width="157.5dp"
                    android:layout_height="245.17dp"
                    android:layout_marginLeft="30dp"
                    android:background="#002C3F2E"
                    android:scaleType="fitXY"
                    android:src="@drawable/b4" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/textView10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/b2"
                    app:srcCompat="@drawable/b2"
                    android:layout_width="157.5dp"
                    android:layout_height="245.17dp"
                    android:layout_marginLeft="30dp"
                    android:background="#001D1010"
                    android:scaleType="fitXY"
                    android:src="@drawable/b5" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/textView10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/b1"
                    app:srcCompat="@drawable/b3"
                    android:layout_width="157.5dp"
                    android:layout_height="245.17dp"
                    android:layout_marginLeft="30dp"
                    android:background="#001D1010"
                    android:scaleType="fitXY"
                    android:src="@drawable/b2" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/textView10" />

            </LinearLayout>

            <TextView
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:text="更新中，敬请期待~"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>